hino 1st commit

--- a/index.html
+++ b/index.html
@@ -22,7 +22,20 @@
   
   <div class="container">
     <main class="main-contents">
-      
+      <!-- はじめ content -->
+        <div class="content hino">
+          <h2 class="content-ttl">南池袋の精肉屋 「鈴源肉店」</h2>
+          <div class="content-inner">
+            <div class="content-text">
+              <p>南池袋にある精肉屋 「鈴源肉店」。<br>昔からある街のお肉屋さん。お弁当も販売しています。私はいつもコロッケ（110円）を注文します。<br>オーダーを受けてから揚げてくれるので、いつも熱々ホカホカ♪ 前もって予約注文しておくと、待ち時間を短縮できるので良いですよ。<br>ソースをかけるかどうかも確認してくれます。<br>お弁当はまだ試したことないですが、少食の人は「ご飯少なめ」とオーダーしないと、とてもじゃないけど食べきれないほどボリューミーなお弁当だそうです。<br>（ご飯を少なくと言えば10円位は値引きしてくれるらしいです。）<br>もちろん、普通のお肉屋さんなので、生肉を購入することもできます。<br>店員さんも元気で優しいおじいちゃんです。</p>
+              <p class="reporter">@hino</p>
+            </div><!-- /.content-txt -->
+            <div class="content-photo">
+              <img src="img/suzugen.jpg" alt="鈴源肉店">
+            </div><!-- /.content-photo -->
+          </div><!-- /.content-inner -->
+        </div>
+      <!-- 終了 /.content -->
 
     </main>
   </div><!-- /.container -->
