--- a/index.html
+++ b/index.html
@@ -36,7 +36,22 @@
           </div><!-- /.content-inner -->
         </div>
       <!-- 終了 /.content -->
-
+      
+      <!-- はじめ content -->
+      <div class="content shigi">
+        <h2 class="content-ttl">南池袋のうどん屋 「硯屋」</h2>
+        <div class="content-inner">
+            <div class="content-text">
+              <p>南池袋にあるうどん屋さん「硯家」。<br>うどんは、讃岐うどんをベースに、コシと喉越しを追求したオリジナルの麺を使用しています。かけうどんは400円代とかなりリーズナブル。<br>中でもおすすめは「スパイシーカレーうどん」、うどん屋さん特有のカレーうどんと違い、スパイスの効いたカレーは定期的に食べたくなるうどんです。他にも「麻辣うどん」は辛いものが大好きな人には満足できる辛さのうどんです。<br>また、なんと言っても、このお店の名物おばさん！お店に来る常連さんは必ずと言っていい程、厨房の中にいるおばさんに挨拶して行きます。気持ちよく挨拶してくれるおばさんにも会いにも行きたくなる、そんなうどん屋さんです。</p>
+              <p class="reporter">@shigihara</p>
+            </div><!-- /.content-txt -->
+          <div class="content-photo">
+            <img src="img/suzuri.jpg" alt="硯家">
+          </div><!-- /.content-photo -->
+        </div><!-- /.content-inner -->
+      </div>
+      <!-- 終了 /.content -->
+      
     </main>
   </div><!-- /.container -->
 
