2024-01-17 Suzuki 自分の記事と写真を追加

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <p class="main-text">
     Shima 23年7月開講クラスのみんなが、<br>各自、お勧めしたい情報を集めたサイトになります。<br>初めてのGitを使って、四苦八苦しながら、プルリクエストをして、<br>なんとか、完成させたサイトになります。
   </p><!-- /.main-text -->
-  
+
   <div class="container">
     <main class="main-contents">
       <!-- はじめ content -->
@@ -35,6 +35,19 @@
             </div><!-- /.content-photo -->
           </div><!-- /.content-inner -->
         </div>
+        <div class="content Suzuki">
+          <h2 class="content-ttl">鎌倉小町通り 「座かふぇ」</h2>
+          <div class="content-inner">
+            <div class="content-text">
+              <p>JR鎌倉駅から小町通りを歩いて5分ほど、黒と赤のシックな外観が特徴の「お浄めミュージアム」。こちらの3階にあるのが、『<a href="https://www.amina-co.jp/service/okiyome-museum/kuracafe" target="_blank" style="color: #ce361b; font-weight: bold; text-decoration: underline;">お浄め足湯 座(くら)かふぇ</a>』です。なんと、建物のなかに本格的な足湯施設があり、その周りも日本庭園風に作りこまれています。さらに、足湯に浸かりながら甘酒や薬膳茶などの各種お浄めドリンク、アイスやスイーツをいただくこともできちゃいます。<br>私が行ったのは昨年8月。うだるような暑さでバテてしまい入店したのですが、少し熱めの足湯は鎌倉散策のリフレッシュにぴったり！ 日替わりのオリジナルハーブティーをいただきながらゆったりと、とても贅沢な時間を過ごすことができました。<br>冬の寒い時期の足湯もまた違った良さがありそうですね。鎌倉に遊びに行った際は、ぜひ寄ってみてくださいね！</p>
+              <p class="reporter">@Suzuki</p>
+            </div><!-- /.content-txt -->
+            <div class="content-photo">
+              <img src="img/kuracafe.webp" alt="ドリンクを飲みながら足湯に入っている写真">
+            </div><!-- /.content-photo -->
+          </div><!-- /.content-inner -->
+        </div>
+
       <!-- 終了 /.content -->
 
     </main>
