OHShichuのリクエスト

--- a/index.html
+++ b/index.html
@@ -51,6 +51,36 @@
         </div><!-- /.content-inner -->
       </div>
       <!-- 終了 /.content -->
+       <!-- はじめ content -->
+       <div class="content OHShichu">
+        <h2 class="content-ttl">崎陽軒(本店)のアフターヌーンティー</h2>
+        <div class="content-inner">
+          <div class="content-text">
+            <p>｜横浜駅の東口そばに佇む崎陽軒の本店には、アフタヌーンティーセットメニューがあるのをご存じでしょうか？2,200円でゴージャスなひとときを味わえるのです！ <br>
+            ｜月替わりの英国式 アフタヌーンティセット
+            アボリータムのアフタヌーンティーセットの内容は月替りになっていて、以下のような構成になっています。<br>
+            ・上段→月替りのケーキ3種<br>
+            ・中段→スコーン＆パスタサラダ（味付けは月替り）<br>
+            ・下段→サンドイッチ2種＆ピクルス <br>
+            ・予約数には限りがあります<br>
+            ・予約可能時間11:45～12:30、14:00～17:00スタートまでの15分刻み <br>
+            ・席の利用は2時間まで <br>
+            ・電話受付時間10:00～18:00<br>
+            ｜その他詳細はアボリータム公式サイトより
+            崎陽軒本店 ティーサロン アボリータム
+            住所：横浜市西区高島2-13-12
+            営業時間：10:00-19:00
+            電話番号：045-441-8765
+            アボリータム公式サイトはこちら 
+            </p>
+            <p class="reporter">@OH Shichu</p>
+          </div><!-- /.content-txt -->
+        <div class="content-photo">
+          <img src="img/img01.jpg" alt="3段アフターヌーンティー">
+        </div><!-- /.content-photo -->
+      </div><!-- /.content-inner -->
+    </div>
+    <!-- 終了 /.content -->
       
     </main>
   </div><!-- /.container -->
